<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/main_menu_iv"
                style="@style/AppBar_Icon"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/menu"
                android:src="@drawable/vector_drawable_menu"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/main_test_iv"
                style="@style/AppBar_Icon"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/test"
                android:src="@drawable/vector_drawable_hearing"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/main_divide"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/main_divide"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/main_news_iv"
                style="@style/AppBar_Icon"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/news"
                android:src="@drawable/vector_drawable_news"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/main_divide"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/main_view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/main_navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:layout_gravity="start"
        app:itemTextColor="@color/PHearing_text_grey"
        app:menu="@menu/menu_main_navigation"
        app:headerLayout="@layout/layout_navigation_header"/>
</androidx.drawerlayout.widget.DrawerLayout>
